# event_camera_study

preprocessing/: CMakeLists.txt  package.xml
preprocessing/cfg/: preprocessor.cfg
preprocessing/include/event_preprocessor_study/: event_preprocessor.hpp
preprocessing/launch/: event_preprocessor_study.launch
preprocessing/src/: event_preprocessor.cpp  event_preprocessor_ros.cpp
