<?xml version="1.0"?>
<package format="2">
  <name>event_preprocessing_study</name>
  <version>0.0.0</version>
  <description>The event_preprocessing_study package</description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>dvs_msgs</depend>

  <export>
  </export>
</package>
